--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,57 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 body {
-   font-family: 'Roboto', sans-serif;
+   font-family: "Roboto", sans-serif;
    font-weight: 400;
+   font-size: 16px;
+   line-height: 1.2;
+   width: 100%;
+   min-height: 100vh;
 }
+
+.container {
+   width: 100%;
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.box {
+   width: 150px;
+   height: 150px;
+   background-color: #eee;
+
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.box:not(:last-child) {
+   margin: 0px 100px 0px 0px;
+}
+
+.item {
+   width: 100px;
+   height: 100px;
+   background-color: blue;
+   cursor: pointer;
+}
+
+.item:active {
+   cursor: grabbing;
+}
+
+.hold {
+   background-color: blueviolet;
+}
+
+.hovered {
+   background-color: yellow;
+   opacity: 0.2;
+}
+
+.hide {
+   display: none;
+}
+`
